# Miraclesoft

./: .gitignore  Logistics Use Case_ Shipment Exception Investigation and Resolution.docx  Logistics_Shipment_Exception_ADK_Research_Document.md
Gemini_Enterprise_Activator/: agentic_ai_failure_analysis_and_template.md
agent_for_adk/: agent.py  food_mcp_server.py  main_agent.py  news_mcp_server.py
agent_for_adk/.adk/: session.db
agentic_rag/: agent.py  config.py  rag-agent  requirements.txt  run.py
agentic_rag/agents/: answer_synthesizer.py  query_analyzer.py  query_refiner.py  rag_retriever.py  web_researcher.py
agentic_rag/tools/: rag_tool.py  (+1 more)
rag_pipeline/: pyproject.toml  rag-ask
rag_pipeline/.venv311/: pyvenv.cfg
rag_pipeline/config/: settings.yaml
rag_pipeline/scripts/: rag_cli.py
rag_pipeline/src/rag_pipeline/: __init__.py  config.py
rag_pipeline/src/rag_pipeline/chunking/: __init__.py
rag_pipeline/src/rag_pipeline/embeddings/: __init__.py
rag_pipeline/src/rag_pipeline/generation/: __init__.py
rag_pipeline/src/rag_pipeline/indexing/: __init__.py  base.py  hnsw.py  ivf.py
rag_pipeline/src/rag_pipeline/pipeline/: __init__.py
rag_pipeline/src/rag_pipeline/reranking/: __init__.py
rag_pipeline/src/rag_pipeline/storage/: __init__.py  constants.py  metadata.py  search.py  vector_store.py
rag_pipeline/tests/: test_rag_pipeline.py
simple_Agent/: agent.py  run_hourly.py  weather_mcp_server.py  weather_tools.py
weather_agent/: __init__.py  agent.py  config.py  cron_runner.py  requirements.txt  run_hourly.py  run_once.py
(+10 files in other folders)
