[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_pipeline"
version = "0.1.0"
description = "From-scratch RAG pipeline with multiple embeddings, local vector storage, and re-ranking"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[project.scripts]
rag = "rag_pipeline.cli:main"
